// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectbox computed usecase-0__disabled-false cssStates 1`] = `
Object {
  "disabled": false,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
  "with-metadata": false,
  "with-search": true,
}
`;

exports[`Selectbox computed usecase-0__disabled-false listItems 1`] = `
Array [
  Object {
    "id": "CLEAR_SELECTION",
    "label": "Please select",
  },
  Object {
    "disabled": true,
    "icon": "plus",
    "id": "1",
    "label": "Something",
    "metadata": "zan.kusterle@gmail.com",
  },
  Object {
    "disabled": true,
    "id": "2",
    "label": "Lorem",
  },
  Object {
    "disabled": true,
    "id": "3",
    "label": "Ipsum",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "4",
    "label": "Really loooooooooooooooooooooooooooooooong label",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "5",
    "label": "B",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "6",
    "label": "C",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "7",
    "label": "D",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "8",
    "label": "E",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "9",
    "label": "F",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "10",
    "label": "G",
    "metadata": "someone@lorem.ipsum",
  },
]
`;

exports[`Selectbox computed usecase-0__disabled-false mappedDisabledText 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-false mappedHelperText 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-false mappedLabelText 1`] = `"Something"`;

exports[`Selectbox computed usecase-0__disabled-false searchText 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-false selected 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-false selectedLabelText 1`] = `"Please select"`;

exports[`Selectbox computed usecase-0__disabled-false selectedMetadataText 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-false states 1`] = `
Object {
  "disabled": false,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
}
`;

exports[`Selectbox computed usecase-0__disabled-true cssStates 1`] = `
Object {
  "disabled": true,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
  "with-metadata": false,
  "with-search": true,
}
`;

exports[`Selectbox computed usecase-0__disabled-true listItems 1`] = `
Array [
  Object {
    "id": "CLEAR_SELECTION",
    "label": "Please select",
  },
  Object {
    "disabled": true,
    "icon": "plus",
    "id": "1",
    "label": "Something",
    "metadata": "zan.kusterle@gmail.com",
  },
  Object {
    "disabled": true,
    "id": "2",
    "label": "Lorem",
  },
  Object {
    "disabled": true,
    "id": "3",
    "label": "Ipsum",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "4",
    "label": "Really loooooooooooooooooooooooooooooooong label",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "5",
    "label": "B",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "6",
    "label": "C",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "7",
    "label": "D",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "8",
    "label": "E",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "9",
    "label": "F",
    "metadata": "someone@lorem.ipsum",
  },
  Object {
    "id": "10",
    "label": "G",
    "metadata": "someone@lorem.ipsum",
  },
]
`;

exports[`Selectbox computed usecase-0__disabled-true mappedDisabledText 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-true mappedHelperText 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-true mappedLabelText 1`] = `"Something"`;

exports[`Selectbox computed usecase-0__disabled-true searchText 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-true selected 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-true selectedLabelText 1`] = `"Please select"`;

exports[`Selectbox computed usecase-0__disabled-true selectedMetadataText 1`] = `""`;

exports[`Selectbox computed usecase-0__disabled-true states 1`] = `
Object {
  "disabled": true,
  "error": false,
  "focused": false,
  "selected": true,
  "warning": false,
}
`;
